cmss/main/default/objects/ContentVersion/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Savings</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
            <value>
                <fullName>Mortgages</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Our Life</fullName>
            </value>
            <value>
                <fullName>Investment Life Insurance</fullName>
            </value>
            <value>
                <fullName>Risk Life Insurance</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>Car Insurance</fullName>
            </value>
            <value>
                <fullName>Pension Products</fullName>
            </value>
            <value>
                <fullName>CSOB Products</fullName>
            </value>
            <value>
                <fullName>Plus Konto</fullName>
            </value>
            <value>
                <fullName>Premium Konto</fullName>
            </value>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>CSOB ID</fullName>
            </value>
            <value>
                <fullName>Consumer Credit</fullName>
            </value>
            <value>
                <fullName>My Bank Journey</fullName>
            </value>
            <value>
                <fullName>Initiation and Operations</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Application Support</fullName>
            </value>
            <value>
                <fullName>Statistics and Evaluations</fullName>
            </value>
            <value>
                <fullName>Fulfillment of Objectives</fullName>
            </value>
            <value>
                <fullName>Competition Results</fullName>
            </value>
            <value>
                <fullName>Managerial Activities</fullName>
            </value>
            <value>
                <fullName>Motivation and Remuneration</fullName>
            </value>
            <value>
                <fullName>Commission System</fullName>
            </value>
            <value>
                <fullName>Benefits for Contractors</fullName>
            </value>
            <value>
                <fullName>Incentives and competitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>