cmss/main/default/objects/ContentVersion/fields/CurrentlyValid__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyValid__c</fullName>
    <formula>(ValidFrom__c &lt;= TODAY() &amp;&amp; ValidTo__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Valid</label>
    <type>Checkbox</type>
</CustomField>